# final_task

./: CMakeLists.txt
JSONs/: config.json
inc/: converter_json.hpp  sapplication.hpp  search_server.hpp
resources/: output_Adventures_of_Huckleberry_Fin.txt  output_Great_Expectations.txt  output_Pride_and_Prejudice.txt  output_Time_Machine.txt  output_dracula.txt
src/: converter_json.cpp  main.cpp  sapplication.cpp  search_server.cpp
